Unknown compatibility (#48)
* Unknown compatibility

* do not show unknown artist and unknown albumn

* Upgrade version

* Fix bug

* Fix typo